Escape unicode chars.