@@ -2,8 +2,12 @@ package world.bentobox.aoneblock.dataobjects;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.apache.commons.text.StringEscapeUtils;
+/**
+ * @author tastybento
+ *
+ */
 import org.bukkit.entity.EntityType;
 import org.eclipse.jdt.annotation.NonNull;
 
@@ -13,12 +17,6 @@ import world.bentobox.aoneblock.oneblocks.OneBlockObject;
 import world.bentobox.bentobox.database.objects.DataObject;
 import world.bentobox.bentobox.database.objects.Table;
 
-import org.apache.commons.lang3.StringEscapeUtils;
-
-/**
- * @author tastybento
- *
- */
 @Table(name = "OneBlockIslands")
 public class OneBlockIslands implements DataObject {
 
@@ -119,7 +117,7 @@ public class OneBlockIslands implements DataObject {
      * @return list of upcoming mobs
      */
     public List<EntityType> getNearestMob(int i) {
-        return getQueue().stream().limit(i).filter(OneBlockObject::isEntity).map(OneBlockObject::getEntityType).collect(Collectors.toList());
+        return getQueue().stream().limit(i).filter(OneBlockObject::isEntity).map(OneBlockObject::getEntityType).toList();
     }
 
     public void add(OneBlockObject nextBlock) {
